--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <script>
-    document.queryselector("#current-date").textContent = new Date().toLocaleDateString();
+    document.querySelector("#current-date").textContent = new Date().toLocaleDateString();
   </script>
 </body>
 </html>
