--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <h1>Harbour Chandler Transfers</h1>
         <div class="subtitle">52 Esplanade<br>Nanaimo, BC</div>
-        <div style="float: right; margin-top: -38px;">Date: {{ "%m/%d/%Y"|strftime }}</div>
+        <div style="float: right; margin-top: -38px;">Date: {{ today_date }}</div>
 
         <form method="POST" enctype="multipart/form-data">
             <label>Upload Stocky CSV File</label>
