--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a class="btn btn-sm csv-btn" href="https://stocky.shopifyapps.com/stock_transfers/{{ t.id }}/csv" target="_blank">Get CSV</a>
+                            <a class="btn btn-sm csv-btn" href="https://stocky.shopifyapps.com/stock_transfers/{{ t.id }}/download.csv" target="_blank">Get CSV</a>
                         </td>
                     </tr>
                     {% endfor %}
