--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
                         <td>{{ t.note or '' }}</td>
                         <td>
                             <a class="btn btn-sm btn-outline-info" 
-                               href="https://stocky.shopifyapps.com/stock_transfers/{{ t.id }}" 
+                               href="{{ t.stocky_url }}" 
                                target="_blank" rel="noopener">View in Stocky</a>
                         </td>
                     </tr>
