--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,9 @@
         </div>
     </div>
     <hr style="border-color: #3a3b3c;">
+    {% if error %}
+      <div class="alert alert-danger">{{ error }}</div>
+    {% endif %}
     <form method="POST" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="csv" class="form-label">Upload Stocky CSV File</label>
