--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
         <button class="btn btn-primary w-100" type="submit">Generate & Download PDF</button>
     </form>
 </div>
+<p> copy and paste this link for stocky! "2a7006-21.myshopify.com" </p>
 
 <div class="active-list">
     <h4 class="mb-3" style="font-weight: 700;">Inventory Transfers (Non-Archived)</h4>
